Fixed link on home page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,7 @@ import OptimizedImage from "@components/OptimizedImage.astro";
 			<p class="mt-4">
 				Check out my <a href="/blog/1">blog</a>, where I post about technology
 				and software. I also run <a href="/as213339">AS213339</a> - if you're interested
-				in peering, <a href="/contact">feel free to get in touch!</a>
+				in peering, <a href="/contact">feel free to get in touch</a>!
 			</p>
 		</div>
 
