--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -33,6 +33,7 @@ const ldJson = {
 ---
 
 <MainLayout
+	enablePattern={false}
 	title={`${post.data.title} | Isaac McFadyen's Site`}
 	description={post.data.description}
 >
