--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -4,6 +4,7 @@ import MainLayout from "@layouts/MainLayout.astro";
 ---
 
 <MainLayout
+	enablePattern={true}
 	title="Contact | Isaac McFadyen's Website"
 	description="If you have a question or comment, feel free to reach out using the form below!"
 >
