--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,11 +5,12 @@ import OptimizedImage from "@components/OptimizedImage.astro";
 ---
 
 <MainLayout
+	enablePattern={true}
 	title="Isaac McFadyen's Site"
 	description="Hi! I'm Isaac McFadyen, a Canadian developer working on personal and open-source projects."
 >
 	<div
-		class="w-screen hero flex justify-evenly items-center px-4"
+		class="w-screen flex justify-evenly items-center px-4"
 		style="height: calc(100vh - 60px - 60px)"
 	>
 		<div class="flex flex-col w-[500px]">
