--- a/src/pages/as213339.astro
+++ b/src/pages/as213339.astro
@@ -6,6 +6,7 @@ import OptimizedImage from "@components/OptimizedImage.astro";
 ---
 
 <MainLayout
+	enablePattern={true}
 	title="AS213339"
 	description="AS213339 is an AS I use for educational and learning purposes, primarily advertised out of Toronto."
 >
