--- a/src/pages/blog/[page].astro
+++ b/src/pages/blog/[page].astro
@@ -11,7 +11,11 @@ export async function getStaticPaths({ paginate }: any) {
 const { page } = Astro.props;
 ---
 
-<MainLayout title="Blog | Isaac McFadyen's Site">
+<MainLayout
+	enablePattern={true}
+	title="Blog | Isaac McFadyen's Site"
+	description="Posts from my blog, where I tak about technology and projects I'm working on."
+>
 	<div class="flex flex-col justify-start items-center px-4">
 		<h1 class="text-3xl font-bold text-center mt-8">Blog</h1>
 		<p class="text-lg max-w-screen-sm mx-auto text-center mt-6">
