--- a/src/pages/blog/tags/[tag].astro
+++ b/src/pages/blog/tags/[tag].astro
@@ -24,7 +24,11 @@ const { posts } = Astro.props;
 const { tag } = Astro.params;
 ---
 
-<MainLayout title={`Posts Tagged #${tag} | Isaac McFadyen's Site`}>
+<MainLayout
+	enablePattern={true}
+	title={`Posts Tagged #${tag} | Isaac McFadyen's Site`}
+	description={`All of the posts from my blog tagged #${tag}.`}
+>
 	<div class="flex flex-col justify-start items-center px-4">
 		<h1 class="text-3xl font-bold text-center mt-8">#{tag}</h1>
 		<p class="text-lg max-w-screen-sm mx-auto text-center mt-4">
